fix: add max-height and max-width to img to prevent flexbox aspect-ratio implicit height cropping bug

--- a/Desktop/打掃工作流程/style.css
+++ b/Desktop/打掃工作流程/style.css
@@ -869,6 +869,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
 .step-img-wrap img {
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
 }
 
@@ -1050,6 +1052,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
 .poster.frame-custom .step-img-wrap img:not(.custom-frame-overlay) {
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
   z-index: 2;
   box-sizing: border-box;
